fixed z-index and added responsiveness to dropdowns(input-page)

--- a/public/stylesheets/input-style.css
+++ b/public/stylesheets/input-style.css
@@ -15,11 +15,14 @@
     background-color: #3D424A;
     box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     border-radius: 25px;
-    padding-top:100px;
+    z-index: -2;
 }
 
 .dropdowns{
     font-family: Montserrat;
+    z-index: 100;
+    margin-top: 150px;
+    cursor:default;
 }
 .dropdown{
     display:flex;
@@ -45,7 +48,7 @@
     flex-direction: column;
     list-style: none;
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
     transform: translateY(10px);
     transition: all 0.4s ease;
 }
@@ -62,7 +65,7 @@
     flex-direction: column;
     list-style: none;
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
     transform: translateY(10px);
     transition: all 0.4s ease;
     
@@ -80,7 +83,7 @@
     flex-direction: column;
     list-style: none;
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
     transform: translateY(-10px);
     transition: all 0.4s ease;
 }
@@ -128,10 +131,10 @@
     
 }
 .inputs{
-    padding-top: 50px;
+    margin-top: 200px;
     display: flex;
     justify-content: space-around;
-    z-index: -3;
+    z-index: -1;
 }
 
 .input-teachers{
